feat: - removed the size field from the list dataset form - added format and records fields in the bounty submission form - added submission info details on the my bounty page cards - added functionality that parses the file size from the uploaded files
